Removed NonMultiThreadHttpClient, because it's probably not needed anymore. Sonar Fixes. Cosmetics. Changed from File to nio.